Fixes 1px of overflow on full width blocks
Resolves https://github.com/WordPress/gutenberg/pull/13964#issuecomment-476604013

--- a/packages/block-library/src/section/editor.scss
+++ b/packages/block-library/src/section/editor.scss
@@ -48,7 +48,7 @@
 		// we "pull" full width blocks out a little further when within a full width section
 		padding-right: 0;
 		padding-left: 0;
-		width: calc(100% + #{$block-padding*6 + $block-spacing*2});
+		width: calc(100% + #{$block-padding*6 + $block-spacing*2 + $border-width});
 		left: -#{$block-padding*3 + $block-spacing};
 		max-width: none;
 
